@@ -1,8 +1,12 @@
-CHANGES.txt - 03/07/2002
+CHANGES.txt - 03/20/2002
 ------------------------
 
 CHANGES IN CUPS V1.2.0a1
 
+	- A single backend process is now run to send all print
+	  data for a job.
+	- Backends and filters can now send and receive
+	  backchannel data over file descriptor 3.
 	- Added support for ICC and CIE colorspaces in RIPs.
 	- Updated the raster stream format to support more
 	  user-defined attributes and to do compression of the
